src/objects/Fund__c.object
<CustomObject>
    <fields>
        <fullName>Abbreviation__c</fullName>
        <label>Abbreviation</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five_Year_Return__c</fullName>
        <label>Five Year Return</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>One_Year_Return__c</fullName>
        <label>One Year Return</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <label>Sector</label>
        <referenceTo>Sector__c</referenceTo>
        <relationshipLabel>Funds</relationshipLabel>
        <relationshipName>Funds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Test_Case_Lookup__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Test Case Lookup</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Funds</relationshipLabel>
        <relationshipName>Funds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Two_Year_Return__c</fullName>
        <label>Two Year Return</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>YTD_Return__c</fullName>
        <label>YTD Return</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Fund</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Rating__c</columns>
        <columns>Sector__c</columns>
        <columns>YTD_Return__c</columns>
        <columns>One_Year_Return__c</columns>
        <columns>Two_Year_Return__c</columns>
        <columns>Five_Year_Return__c</columns>
        <columns>Abbreviation__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Fund Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>